objects/CRMDB_Contact__c.object
<CustomObject>
    <fields>
        <fullName>CMS_Relationship_Alignment_Name__c</fullName>
        <description>CMS Relationship Alignment Name</description>
        <label>CMS Relationship Alignment Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco Primary</fullName>
                </value>
                <value>
                    <fullName>Cisco Secondary</fullName>
                </value>
                <value>
                    <fullName>Customer Primary</fullName>
                </value>
                <value>
                    <fullName>Customer Secondary</fullName>
                </value>
                <value>
                    <fullName>Additional Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crisis_Management_Contacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Crisis Management Contacts</label>
        <referenceTo>CRMDB__c</referenceTo>
        <relationshipLabel>Crisis Management Contacts</relationshipLabel>
        <relationshipName>CRMDB_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Key_Contacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contacts</label>
        <referenceTo>CRMDB__c</referenceTo>
        <relationshipLabel>Key Contacts</relationshipLabel>
        <relationshipName>CRMDB_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <description>Last Contact Date</description>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes</description>
        <label>Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <description>CRMDB Contract hold the Key and Crisis contacts for the CRMDB Contracts</description>
    <label>CRMDB Contact</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRMDB Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Crisis_Contact</fullName>
        <active>true</active>
        <label>Crisis Management Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_Contact</fullName>
        <active>true</active>
        <label>Key Contact</label>
    </recordTypes>
</CustomObject>